--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
         </header>
         <section>
 
-            <form action="" id="form-rating">
+            <form id="form-rating">
                 <p>
-                    <label for="principal">Amount</label>
-                    <input type="number" id="principal" required>
+                    <label for="amount">Amount</label>
+                    <input type="number" id="amount" name="amount" required>
                 </p>
                 <p>
                     <label for="rate">Interest Rate</label>
-                    <input type="range" min="0" max="100" id="rate" step="0.01" required>
+                    <input type="range" min="0" max="100" step="0.1" name="rate" value="0"
+                        onchange="showValue(this.value)" required>
+                    <span id="rate">0 <span>%</span></span>
                 </p>
+                </p>
+
+
                 <p>
                     <label for="years">No. of Years</label>
                     <!--<input type="number" id="years">-->
-                    <select id="years" required>
+                    <select id="years" name="years" required>
                         <option value="1" selected>1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                 </p>
 
